--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
+    "pino-http": "^9.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
